// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AvatarGroup - Snapshots > matches snapshot with basic items 1`] = `
<div
  class="flex items-center"
  data-testid="container"
>
  <div
    class="relative rounded-full shadow-xs"
    data-testid="container"
    style="margin-left: 0px; z-index: 2;"
  >
    <span
      class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8"
    >
      <span
        class="flex h-full w-full items-center justify-center rounded-full border border-muted-foreground bg-muted overflow-hidden border-none"
      >
        <div
          class="facehash h-full w-full rounded-full text-background"
          data-facehash=""
          data-interactive="true"
          style="width: 100%; height: 100%; position: relative; display: flex; align-items: center; justify-content: center; overflow: hidden; container-type: size; perspective: 300px; transform-style: preserve-3d; background-color: rgb(0, 240, 255);"
        >
          <div
            data-facehash-gradient=""
            style="position: absolute; inset: 0px; pointer-events: none; z-index: 1; background: radial-gradient(100% 100% at 50% 50%, rgba(255, 255, 255, 0.15) 0%, transparent 60%);"
          />
          <div
            data-facehash-face=""
            style="position: absolute; inset: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 2; transform: rotateX(-15deg) rotateY(0deg) translateZ(12px); transform-style: preserve-3d; transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
          >
            <svg
              aria-hidden="true"
              fill="none"
              style="width: 60%; height: auto; max-width: 90%; max-height: 40%;"
              viewBox="0 0 71 23"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                style="animation: facehash-blink 5.9s ease-in-out 3.9s infinite; transform-origin: center center;"
              >
                <rect
                  fill="currentColor"
                  height="23"
                  rx="3.5"
                  width="7"
                  x="8"
                  y="0"
                />
                <rect
                  fill="currentColor"
                  height="7"
                  rx="3.5"
                  width="23"
                  x="0"
                  y="8"
                />
              </g>
              <g
                style="animation: facehash-blink 5.9s ease-in-out 3.9s infinite; transform-origin: center center;"
              >
                <rect
                  fill="currentColor"
                  height="23"
                  rx="3.5"
                  width="7"
                  x="55.2"
                  y="0"
                />
                <rect
                  fill="currentColor"
                  height="7"
                  rx="3.5"
                  width="23"
                  x="47.3"
                  y="8"
                />
              </g>
            </svg>
            <div
              data-facehash-mouth=""
              style="margin-top: 8%; display: flex; align-items: center; justify-content: center;"
            >
              <span
                data-testid="avatar-fallback-initial"
                style="font-size: 26cqw; line-height: 1;"
              >
                A
              </span>
            </div>
          </div>
        </div>
      </span>
    </span>
  </div>
  <div
    class="relative rounded-full shadow-xs"
    data-testid="container"
    style="margin-left: -8px; z-index: 3;"
  >
    <span
      class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8"
    >
      <span
        class="flex h-full w-full items-center justify-center rounded-full border border-muted-foreground bg-muted overflow-hidden border-none"
      >
        <div
          class="facehash h-full w-full rounded-full text-background"
          data-facehash=""
          data-interactive="true"
          style="width: 100%; height: 100%; position: relative; display: flex; align-items: center; justify-content: center; overflow: hidden; container-type: size; perspective: 300px; transform-style: preserve-3d; background-color: rgb(0, 75, 255);"
        >
          <div
            data-facehash-gradient=""
            style="position: absolute; inset: 0px; pointer-events: none; z-index: 1; background: radial-gradient(100% 100% at 50% 50%, rgba(255, 255, 255, 0.15) 0%, transparent 60%);"
          />
          <div
            data-facehash-face=""
            style="position: absolute; inset: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 2; transform: rotateX(0deg) rotateY(0deg) translateZ(12px); transform-style: preserve-3d; transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
          >
            <svg
              aria-hidden="true"
              fill="none"
              style="width: 60%; height: auto; max-width: 90%; max-height: 40%;"
              viewBox="0 0 82 8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                style="animation: facehash-blink 5s ease-in-out 3s infinite; transform-origin: center center;"
              >
                <rect
                  fill="currentColor"
                  height="6.9"
                  rx="3.5"
                  width="6.9"
                  x="0.07"
                  y="0.16"
                />
                <rect
                  fill="currentColor"
                  height="6.9"
                  rx="3.5"
                  width="20.7"
                  x="7.9"
                  y="0.16"
                />
              </g>
              <g
                style="animation: facehash-blink 5s ease-in-out 3s infinite; transform-origin: center center;"
              >
                <rect
                  fill="currentColor"
                  height="6.9"
                  rx="3.5"
                  width="6.9"
                  x="74.7"
                  y="0.16"
                />
                <rect
                  fill="currentColor"
                  height="6.9"
                  rx="3.5"
                  width="20.7"
                  x="53.1"
                  y="0.16"
                />
              </g>
            </svg>
            <div
              data-facehash-mouth=""
              style="margin-top: 8%; display: flex; align-items: center; justify-content: center;"
            >
              <span
                data-testid="avatar-fallback-initial"
                style="font-size: 26cqw; line-height: 1;"
              >
                B
              </span>
            </div>
          </div>
        </div>
      </span>
    </span>
  </div>
</div>
`;

exports[`AvatarGroup - Snapshots > matches snapshot with custom maxAvatars 1`] = `
<div
  class="flex items-center"
  data-testid="container"
>
  <div
    class="relative rounded-full shadow-xs"
    data-testid="container"
    style="margin-left: 0px; z-index: 3;"
  >
    <span
      class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8"
    >
      <span
        class="flex h-full w-full items-center justify-center rounded-full border border-muted-foreground bg-muted overflow-hidden border-none"
      >
        <div
          class="facehash h-full w-full rounded-full text-background"
          data-facehash=""
          data-interactive="true"
          style="width: 100%; height: 100%; position: relative; display: flex; align-items: center; justify-content: center; overflow: hidden; container-type: size; perspective: 300px; transform-style: preserve-3d; background-color: rgb(0, 255, 93);"
        >
          <div
            data-facehash-gradient=""
            style="position: absolute; inset: 0px; pointer-events: none; z-index: 1; background: radial-gradient(100% 100% at 50% 50%, rgba(255, 255, 255, 0.15) 0%, transparent 60%);"
          />
          <div
            data-facehash-face=""
            style="position: absolute; inset: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 2; transform: rotateX(0deg) rotateY(15deg) translateZ(12px); transform-style: preserve-3d; transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
          >
            <svg
              aria-hidden="true"
              fill="none"
              style="width: 60%; height: auto; max-width: 90%; max-height: 40%;"
              viewBox="0 0 63 15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                style="animation: facehash-blink 2.8s ease-in-out 0.8s infinite; transform-origin: center center;"
              >
                <circle
                  cx="55.2"
                  cy="7.2"
                  fill="currentColor"
                  r="7.2"
                />
              </g>
              <g
                style="animation: facehash-blink 2.8s ease-in-out 0.8s infinite; transform-origin: center center;"
              >
                <circle
                  cx="7.2"
                  cy="7.2"
                  fill="currentColor"
                  r="7.2"
                />
              </g>
            </svg>
            <div
              data-facehash-mouth=""
              style="margin-top: 8%; display: flex; align-items: center; justify-content: center;"
            >
              <span
                data-testid="avatar-fallback-initial"
                style="font-size: 26cqw; line-height: 1;"
              >
                U
              </span>
            </div>
          </div>
        </div>
      </span>
    </span>
  </div>
  <div
    class="relative rounded-full shadow-xs"
    data-testid="container"
    style="margin-left: -8px; z-index: 4;"
  >
    <span
      class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8"
    >
      <span
        class="flex h-full w-full items-center justify-center rounded-full border border-muted-foreground bg-muted overflow-hidden border-none"
      >
        <div
          class="facehash h-full w-full rounded-full text-background"
          data-facehash=""
          data-interactive="true"
          style="width: 100%; height: 100%; position: relative; display: flex; align-items: center; justify-content: center; overflow: hidden; container-type: size; perspective: 300px; transform-style: preserve-3d; background-color: rgb(0, 240, 255);"
        >
          <div
            data-facehash-gradient=""
            style="position: absolute; inset: 0px; pointer-events: none; z-index: 1; background: radial-gradient(100% 100% at 50% 50%, rgba(255, 255, 255, 0.15) 0%, transparent 60%);"
          />
          <div
            data-facehash-face=""
            style="position: absolute; inset: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 2; transform: rotateX(-15deg) rotateY(0deg) translateZ(12px); transform-style: preserve-3d; transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
          >
            <svg
              aria-hidden="true"
              fill="none"
              style="width: 60%; height: auto; max-width: 90%; max-height: 40%;"
              viewBox="0 0 71 23"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                style="animation: facehash-blink 5.9s ease-in-out 3.9s infinite; transform-origin: center center;"
              >
                <rect
                  fill="currentColor"
                  height="23"
                  rx="3.5"
                  width="7"
                  x="8"
                  y="0"
                />
                <rect
                  fill="currentColor"
                  height="7"
                  rx="3.5"
                  width="23"
                  x="0"
                  y="8"
                />
              </g>
              <g
                style="animation: facehash-blink 5.9s ease-in-out 3.9s infinite; transform-origin: center center;"
              >
                <rect
                  fill="currentColor"
                  height="23"
                  rx="3.5"
                  width="7"
                  x="55.2"
                  y="0"
                />
                <rect
                  fill="currentColor"
                  height="7"
                  rx="3.5"
                  width="23"
                  x="47.3"
                  y="8"
                />
              </g>
            </svg>
            <div
              data-facehash-mouth=""
              style="margin-top: 8%; display: flex; align-items: center; justify-content: center;"
            >
              <span
                data-testid="avatar-fallback-initial"
                style="font-size: 26cqw; line-height: 1;"
              >
                U
              </span>
            </div>
          </div>
        </div>
      </span>
    </span>
  </div>
  <div
    class="relative rounded-full shadow-xs"
    data-testid="container"
    style="margin-left: -8px; z-index: 5;"
  >
    <span
      class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8"
    >
      <span
        class="flex h-full w-full items-center justify-center rounded-full border border-muted-foreground bg-muted overflow-hidden border-none"
      >
        <div
          class="facehash h-full w-full rounded-full text-background"
          data-facehash=""
          data-interactive="true"
          style="width: 100%; height: 100%; position: relative; display: flex; align-items: center; justify-content: center; overflow: hidden; container-type: size; perspective: 300px; transform-style: preserve-3d; background-color: rgb(0, 75, 255);"
        >
          <div
            data-facehash-gradient=""
            style="position: absolute; inset: 0px; pointer-events: none; z-index: 1; background: radial-gradient(100% 100% at 50% 50%, rgba(255, 255, 255, 0.15) 0%, transparent 60%);"
          />
          <div
            data-facehash-face=""
            style="position: absolute; inset: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 2; transform: rotateX(0deg) rotateY(0deg) translateZ(12px); transform-style: preserve-3d; transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
          >
            <svg
              aria-hidden="true"
              fill="none"
              style="width: 60%; height: auto; max-width: 90%; max-height: 40%;"
              viewBox="0 0 82 8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                style="animation: facehash-blink 5s ease-in-out 3s infinite; transform-origin: center center;"
              >
                <rect
                  fill="currentColor"
                  height="6.9"
                  rx="3.5"
                  width="6.9"
                  x="0.07"
                  y="0.16"
                />
                <rect
                  fill="currentColor"
                  height="6.9"
                  rx="3.5"
                  width="20.7"
                  x="7.9"
                  y="0.16"
                />
              </g>
              <g
                style="animation: facehash-blink 5s ease-in-out 3s infinite; transform-origin: center center;"
              >
                <rect
                  fill="currentColor"
                  height="6.9"
                  rx="3.5"
                  width="6.9"
                  x="74.7"
                  y="0.16"
                />
                <rect
                  fill="currentColor"
                  height="6.9"
                  rx="3.5"
                  width="20.7"
                  x="53.1"
                  y="0.16"
                />
              </g>
            </svg>
            <div
              data-facehash-mouth=""
              style="margin-top: 8%; display: flex; align-items: center; justify-content: center;"
            >
              <span
                data-testid="avatar-fallback-initial"
                style="font-size: 26cqw; line-height: 1;"
              >
                U
              </span>
            </div>
          </div>
        </div>
      </span>
    </span>
  </div>
  <div
    class="relative flex size-8 items-center justify-center rounded-full border border-muted-foreground bg-background text-sm font-medium shadow-xs"
    data-testid="container"
    style="margin-left: -8px; z-index: 4;"
  >
    +47
  </div>
</div>
`;

exports[`AvatarGroup - Snapshots > matches snapshot with items without avatarUrl 1`] = `
<div
  class="flex items-center"
  data-testid="container"
>
  <div
    class="relative rounded-full shadow-xs"
    data-testid="container"
    style="margin-left: 0px; z-index: 2;"
  >
    <span
      class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8"
    >
      <span
        class="flex h-full w-full items-center justify-center rounded-full border border-muted-foreground bg-muted overflow-hidden border-none"
      >
        <div
          class="facehash h-full w-full rounded-full text-background"
          data-facehash=""
          data-interactive="true"
          style="width: 100%; height: 100%; position: relative; display: flex; align-items: center; justify-content: center; overflow: hidden; container-type: size; perspective: 300px; transform-style: preserve-3d; background-color: rgb(0, 240, 255);"
        >
          <div
            data-facehash-gradient=""
            style="position: absolute; inset: 0px; pointer-events: none; z-index: 1; background: radial-gradient(100% 100% at 50% 50%, rgba(255, 255, 255, 0.15) 0%, transparent 60%);"
          />
          <div
            data-facehash-face=""
            style="position: absolute; inset: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 2; transform: rotateX(-15deg) rotateY(0deg) translateZ(12px); transform-style: preserve-3d; transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
          >
            <svg
              aria-hidden="true"
              fill="none"
              style="width: 60%; height: auto; max-width: 90%; max-height: 40%;"
              viewBox="0 0 71 23"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                style="animation: facehash-blink 5.9s ease-in-out 3.9s infinite; transform-origin: center center;"
              >
                <rect
                  fill="currentColor"
                  height="23"
                  rx="3.5"
                  width="7"
                  x="8"
                  y="0"
                />
                <rect
                  fill="currentColor"
                  height="7"
                  rx="3.5"
                  width="23"
                  x="0"
                  y="8"
                />
              </g>
              <g
                style="animation: facehash-blink 5.9s ease-in-out 3.9s infinite; transform-origin: center center;"
              >
                <rect
                  fill="currentColor"
                  height="23"
                  rx="3.5"
                  width="7"
                  x="55.2"
                  y="0"
                />
                <rect
                  fill="currentColor"
                  height="7"
                  rx="3.5"
                  width="23"
                  x="47.3"
                  y="8"
                />
              </g>
            </svg>
            <div
              data-facehash-mouth=""
              style="margin-top: 8%; display: flex; align-items: center; justify-content: center;"
            >
              <span
                data-testid="avatar-fallback-initial"
                style="font-size: 26cqw; line-height: 1;"
              >
                A
              </span>
            </div>
          </div>
        </div>
      </span>
    </span>
  </div>
  <div
    class="relative rounded-full shadow-xs"
    data-testid="container"
    style="margin-left: -8px; z-index: 3;"
  >
    <span
      class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8"
    >
      <span
        class="flex h-full w-full items-center justify-center rounded-full border border-muted-foreground bg-muted overflow-hidden border-none"
      >
        <div
          class="facehash h-full w-full rounded-full text-background"
          data-facehash=""
          data-interactive="true"
          style="width: 100%; height: 100%; position: relative; display: flex; align-items: center; justify-content: center; overflow: hidden; container-type: size; perspective: 300px; transform-style: preserve-3d; background-color: rgb(0, 75, 255);"
        >
          <div
            data-facehash-gradient=""
            style="position: absolute; inset: 0px; pointer-events: none; z-index: 1; background: radial-gradient(100% 100% at 50% 50%, rgba(255, 255, 255, 0.15) 0%, transparent 60%);"
          />
          <div
            data-facehash-face=""
            style="position: absolute; inset: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 2; transform: rotateX(0deg) rotateY(0deg) translateZ(12px); transform-style: preserve-3d; transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
          >
            <svg
              aria-hidden="true"
              fill="none"
              style="width: 60%; height: auto; max-width: 90%; max-height: 40%;"
              viewBox="0 0 82 8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                style="animation: facehash-blink 5s ease-in-out 3s infinite; transform-origin: center center;"
              >
                <rect
                  fill="currentColor"
                  height="6.9"
                  rx="3.5"
                  width="6.9"
                  x="0.07"
                  y="0.16"
                />
                <rect
                  fill="currentColor"
                  height="6.9"
                  rx="3.5"
                  width="20.7"
                  x="7.9"
                  y="0.16"
                />
              </g>
              <g
                style="animation: facehash-blink 5s ease-in-out 3s infinite; transform-origin: center center;"
              >
                <rect
                  fill="currentColor"
                  height="6.9"
                  rx="3.5"
                  width="6.9"
                  x="74.7"
                  y="0.16"
                />
                <rect
                  fill="currentColor"
                  height="6.9"
                  rx="3.5"
                  width="20.7"
                  x="53.1"
                  y="0.16"
                />
              </g>
            </svg>
            <div
              data-facehash-mouth=""
              style="margin-top: 8%; display: flex; align-items: center; justify-content: center;"
            >
              <span
                data-testid="avatar-fallback-initial"
                style="font-size: 26cqw; line-height: 1;"
              >
                B
              </span>
            </div>
          </div>
        </div>
      </span>
    </span>
  </div>
</div>
`;

exports[`AvatarGroup - Snapshots > matches snapshot with max overflow (+99) 1`] = `
<div
  class="flex items-center"
  data-testid="container"
>
  <div
    class="relative rounded-full shadow-xs"
    data-testid="container"
    style="margin-left: 0px; z-index: 6;"
  >
    <span
      class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8"
    >
      <span
        class="flex h-full w-full items-center justify-center rounded-full border border-muted-foreground bg-muted overflow-hidden border-none"
      >
        <div
          class="facehash h-full w-full rounded-full text-background"
          data-facehash=""
          data-interactive="true"
          style="width: 100%; height: 100%; position: relative; display: flex; align-items: center; justify-content: center; overflow: hidden; container-type: size; perspective: 300px; transform-style: preserve-3d; background-color: rgb(0, 255, 93);"
        >
          <div
            data-facehash-gradient=""
            style="position: absolute; inset: 0px; pointer-events: none; z-index: 1; background: radial-gradient(100% 100% at 50% 50%, rgba(255, 255, 255, 0.15) 0%, transparent 60%);"
          />
          <div
            data-facehash-face=""
            style="position: absolute; inset: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 2; transform: rotateX(0deg) rotateY(15deg) translateZ(12px); transform-style: preserve-3d; transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
          >
            <svg
              aria-hidden="true"
              fill="none"
              style="width: 60%; height: auto; max-width: 90%; max-height: 40%;"
              viewBox="0 0 63 15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                style="animation: facehash-blink 2.8s ease-in-out 0.8s infinite; transform-origin: center center;"
              >
                <circle
                  cx="55.2"
                  cy="7.2"
                  fill="currentColor"
                  r="7.2"
                />
              </g>
              <g
                style="animation: facehash-blink 2.8s ease-in-out 0.8s infinite; transform-origin: center center;"
              >
                <circle
                  cx="7.2"
                  cy="7.2"
                  fill="currentColor"
                  r="7.2"
                />
              </g>
            </svg>
            <div
              data-facehash-mouth=""
              style="margin-top: 8%; display: flex; align-items: center; justify-content: center;"
            >
              <span
                data-testid="avatar-fallback-initial"
                style="font-size: 26cqw; line-height: 1;"
              >
                U
              </span>
            </div>
          </div>
        </div>
      </span>
    </span>
  </div>
  <div
    class="relative rounded-full shadow-xs"
    data-testid="container"
    style="margin-left: -8px; z-index: 7;"
  >
    <span
      class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8"
    >
      <span
        class="flex h-full w-full items-center justify-center rounded-full border border-muted-foreground bg-muted overflow-hidden border-none"
      >
        <div
          class="facehash h-full w-full rounded-full text-background"
          data-facehash=""
          data-interactive="true"
          style="width: 100%; height: 100%; position: relative; display: flex; align-items: center; justify-content: center; overflow: hidden; container-type: size; perspective: 300px; transform-style: preserve-3d; background-color: rgb(0, 240, 255);"
        >
          <div
            data-facehash-gradient=""
            style="position: absolute; inset: 0px; pointer-events: none; z-index: 1; background: radial-gradient(100% 100% at 50% 50%, rgba(255, 255, 255, 0.15) 0%, transparent 60%);"
          />
          <div
            data-facehash-face=""
            style="position: absolute; inset: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 2; transform: rotateX(-15deg) rotateY(0deg) translateZ(12px); transform-style: preserve-3d; transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
          >
            <svg
              aria-hidden="true"
              fill="none"
              style="width: 60%; height: auto; max-width: 90%; max-height: 40%;"
              viewBox="0 0 71 23"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                style="animation: facehash-blink 5.9s ease-in-out 3.9s infinite; transform-origin: center center;"
              >
                <rect
                  fill="currentColor"
                  height="23"
                  rx="3.5"
                  width="7"
                  x="8"
                  y="0"
                />
                <rect
                  fill="currentColor"
                  height="7"
                  rx="3.5"
                  width="23"
                  x="0"
                  y="8"
                />
              </g>
              <g
                style="animation: facehash-blink 5.9s ease-in-out 3.9s infinite; transform-origin: center center;"
              >
                <rect
                  fill="currentColor"
                  height="23"
                  rx="3.5"
                  width="7"
                  x="55.2"
                  y="0"
                />
                <rect
                  fill="currentColor"
                  height="7"
                  rx="3.5"
                  width="23"
                  x="47.3"
                  y="8"
                />
              </g>
            </svg>
            <div
              data-facehash-mouth=""
              style="margin-top: 8%; display: flex; align-items: center; justify-content: center;"
            >
              <span
                data-testid="avatar-fallback-initial"
                style="font-size: 26cqw; line-height: 1;"
              >
                U
              </span>
            </div>
          </div>
        </div>
      </span>
    </span>
  </div>
  <div
    class="relative rounded-full shadow-xs"
    data-testid="container"
    style="margin-left: -8px; z-index: 8;"
  >
    <span
      class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8"
    >
      <span
        class="flex h-full w-full items-center justify-center rounded-full border border-muted-foreground bg-muted overflow-hidden border-none"
      >
        <div
          class="facehash h-full w-full rounded-full text-background"
          data-facehash=""
          data-interactive="true"
          style="width: 100%; height: 100%; position: relative; display: flex; align-items: center; justify-content: center; overflow: hidden; container-type: size; perspective: 300px; transform-style: preserve-3d; background-color: rgb(0, 75, 255);"
        >
          <div
            data-facehash-gradient=""
            style="position: absolute; inset: 0px; pointer-events: none; z-index: 1; background: radial-gradient(100% 100% at 50% 50%, rgba(255, 255, 255, 0.15) 0%, transparent 60%);"
          />
          <div
            data-facehash-face=""
            style="position: absolute; inset: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 2; transform: rotateX(0deg) rotateY(0deg) translateZ(12px); transform-style: preserve-3d; transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
          >
            <svg
              aria-hidden="true"
              fill="none"
              style="width: 60%; height: auto; max-width: 90%; max-height: 40%;"
              viewBox="0 0 82 8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                style="animation: facehash-blink 5s ease-in-out 3s infinite; transform-origin: center center;"
              >
                <rect
                  fill="currentColor"
                  height="6.9"
                  rx="3.5"
                  width="6.9"
                  x="0.07"
                  y="0.16"
                />
                <rect
                  fill="currentColor"
                  height="6.9"
                  rx="3.5"
                  width="20.7"
                  x="7.9"
                  y="0.16"
                />
              </g>
              <g
                style="animation: facehash-blink 5s ease-in-out 3s infinite; transform-origin: center center;"
              >
                <rect
                  fill="currentColor"
                  height="6.9"
                  rx="3.5"
                  width="6.9"
                  x="74.7"
                  y="0.16"
                />
                <rect
                  fill="currentColor"
                  height="6.9"
                  rx="3.5"
                  width="20.7"
                  x="53.1"
                  y="0.16"
                />
              </g>
            </svg>
            <div
              data-facehash-mouth=""
              style="margin-top: 8%; display: flex; align-items: center; justify-content: center;"
            >
              <span
                data-testid="avatar-fallback-initial"
                style="font-size: 26cqw; line-height: 1;"
              >
                U
              </span>
            </div>
          </div>
        </div>
      </span>
    </span>
  </div>
  <div
    class="relative rounded-full shadow-xs"
    data-testid="container"
    style="margin-left: -8px; z-index: 9;"
  >
    <span
      class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8"
    >
      <span
        class="flex h-full w-full items-center justify-center rounded-full border border-muted-foreground bg-muted overflow-hidden border-none"
      >
        <div
          class="facehash h-full w-full rounded-full text-background"
          data-facehash=""
          data-interactive="true"
          style="width: 100%; height: 100%; position: relative; display: flex; align-items: center; justify-content: center; overflow: hidden; container-type: size; perspective: 300px; transform-style: preserve-3d; background-color: rgb(252, 0, 255);"
        >
          <div
            data-facehash-gradient=""
            style="position: absolute; inset: 0px; pointer-events: none; z-index: 1; background: radial-gradient(100% 100% at 50% 50%, rgba(255, 255, 255, 0.15) 0%, transparent 60%);"
          />
          <div
            data-facehash-face=""
            style="position: absolute; inset: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 2; transform: rotateX(0deg) rotateY(-15deg) translateZ(12px); transform-style: preserve-3d; transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
          >
            <svg
              aria-hidden="true"
              fill="none"
              style="width: 60%; height: auto; max-width: 90%; max-height: 40%;"
              viewBox="0 0 63 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                style="animation: facehash-blink 4.1s ease-in-out 2.1s infinite; transform-origin: center center;"
              >
                <path
                  d="M0 5.1c0-.1 0-.2 0-.3.1-.5.3-1 .7-1.3.1 0 .1-.1.2-.1C2.4 2.2 6 0 10.5 0S18.6 2.2 20.2 3.3c.1 0 .1.1.1.1.4.3.7.9.7 1.3v.3c0 1 0 1.4 0 1.7-.2 1.3-1.2 1.9-2.5 1.6-.2 0-.7-.3-1.8-.8C15 6.7 12.8 6 10.5 6s-4.5.7-6.3 1.5c-1 .5-1.5.7-1.8.8-1.3.3-2.3-.3-2.5-1.6v-1.7z"
                  fill="currentColor"
                />
              </g>
              <g
                style="animation: facehash-blink 4.1s ease-in-out 2.1s infinite; transform-origin: center center;"
              >
                <path
                  d="M42 5.1c0-.1 0-.2 0-.3.1-.5.3-1 .7-1.3.1 0 .1-.1.2-.1C44.4 2.2 48 0 52.5 0S60.6 2.2 62.2 3.3c.1 0 .1.1.1.1.4.3.7.9.7 1.3v.3c0 1 0 1.4 0 1.7-.2 1.3-1.2 1.9-2.5 1.6-.2 0-.7-.3-1.8-.8C57 6.7 54.8 6 52.5 6s-4.5.7-6.3 1.5c-1 .5-1.5.7-1.8.8-1.3.3-2.3-.3-2.5-1.6v-1.7z"
                  fill="currentColor"
                />
              </g>
            </svg>
            <div
              data-facehash-mouth=""
              style="margin-top: 8%; display: flex; align-items: center; justify-content: center;"
            >
              <span
                data-testid="avatar-fallback-initial"
                style="font-size: 26cqw; line-height: 1;"
              >
                U
              </span>
            </div>
          </div>
        </div>
      </span>
    </span>
  </div>
  <div
    class="relative rounded-full shadow-xs"
    data-testid="container"
    style="margin-left: -8px; z-index: 10;"
  >
    <span
      class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8"
    >
      <span
        class="flex h-full w-full items-center justify-center rounded-full border border-muted-foreground bg-muted overflow-hidden border-none"
      >
        <div
          class="facehash h-full w-full rounded-full text-background"
          data-facehash=""
          data-interactive="true"
          style="width: 100%; height: 100%; position: relative; display: flex; align-items: center; justify-content: center; overflow: hidden; container-type: size; perspective: 300px; transform-style: preserve-3d; background-color: rgb(255, 0, 0);"
        >
          <div
            data-facehash-gradient=""
            style="position: absolute; inset: 0px; pointer-events: none; z-index: 1; background: radial-gradient(100% 100% at 50% 50%, rgba(255, 255, 255, 0.15) 0%, transparent 60%);"
          />
          <div
            data-facehash-face=""
            style="position: absolute; inset: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 2; transform: rotateX(-15deg) rotateY(-15deg) translateZ(12px); transform-style: preserve-3d; transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
          >
            <svg
              aria-hidden="true"
              fill="none"
              style="width: 60%; height: auto; max-width: 90%; max-height: 40%;"
              viewBox="0 0 63 15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                style="animation: facehash-blink 3.2s ease-in-out 1.2s infinite; transform-origin: center center;"
              >
                <circle
                  cx="55.2"
                  cy="7.2"
                  fill="currentColor"
                  r="7.2"
                />
              </g>
              <g
                style="animation: facehash-blink 3.2s ease-in-out 1.2s infinite; transform-origin: center center;"
              >
                <circle
                  cx="7.2"
                  cy="7.2"
                  fill="currentColor"
                  r="7.2"
                />
              </g>
            </svg>
            <div
              data-facehash-mouth=""
              style="margin-top: 8%; display: flex; align-items: center; justify-content: center;"
            >
              <span
                data-testid="avatar-fallback-initial"
                style="font-size: 26cqw; line-height: 1;"
              >
                U
              </span>
            </div>
          </div>
        </div>
      </span>
    </span>
  </div>
  <div
    class="relative rounded-full shadow-xs"
    data-testid="container"
    style="margin-left: -8px; z-index: 11;"
  >
    <span
      class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8"
    >
      <span
        class="flex h-full w-full items-center justify-center rounded-full border border-muted-foreground bg-muted overflow-hidden border-none"
      >
        <div
          class="facehash h-full w-full rounded-full text-background"
          data-facehash=""
          data-interactive="true"
          style="width: 100%; height: 100%; position: relative; display: flex; align-items: center; justify-content: center; overflow: hidden; container-type: size; perspective: 300px; transform-style: preserve-3d; background-color: rgb(255, 153, 0);"
        >
          <div
            data-facehash-gradient=""
            style="position: absolute; inset: 0px; pointer-events: none; z-index: 1; background: radial-gradient(100% 100% at 50% 50%, rgba(255, 255, 255, 0.15) 0%, transparent 60%);"
          />
          <div
            data-facehash-face=""
            style="position: absolute; inset: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 2; transform: rotateX(15deg) rotateY(-15deg) translateZ(12px); transform-style: preserve-3d; transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
          >
            <svg
              aria-hidden="true"
              fill="none"
              style="width: 60%; height: auto; max-width: 90%; max-height: 40%;"
              viewBox="0 0 71 23"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                style="animation: facehash-blink 2.3s ease-in-out 0.3s infinite; transform-origin: center center;"
              >
                <rect
                  fill="currentColor"
                  height="23"
                  rx="3.5"
                  width="7"
                  x="8"
                  y="0"
                />
                <rect
                  fill="currentColor"
                  height="7"
                  rx="3.5"
                  width="23"
                  x="0"
                  y="8"
                />
              </g>
              <g
                style="animation: facehash-blink 2.3s ease-in-out 0.3s infinite; transform-origin: center center;"
              >
                <rect
                  fill="currentColor"
                  height="23"
                  rx="3.5"
                  width="7"
                  x="55.2"
                  y="0"
                />
                <rect
                  fill="currentColor"
                  height="7"
                  rx="3.5"
                  width="23"
                  x="47.3"
                  y="8"
                />
              </g>
            </svg>
            <div
              data-facehash-mouth=""
              style="margin-top: 8%; display: flex; align-items: center; justify-content: center;"
            >
              <span
                data-testid="avatar-fallback-initial"
                style="font-size: 26cqw; line-height: 1;"
              >
                U
              </span>
            </div>
          </div>
        </div>
      </span>
    </span>
  </div>
  <div
    class="relative flex size-8 items-center justify-center rounded-full border border-muted-foreground bg-background text-sm font-medium shadow-xs"
    data-testid="container"
    style="margin-left: -8px; z-index: 7;"
  >
    +99
  </div>
</div>
`;

exports[`AvatarGroup - Snapshots > matches snapshot with overflow 1`] = `
<div
  class="flex items-center"
  data-testid="container"
>
  <div
    class="relative rounded-full shadow-xs"
    data-testid="container"
    style="margin-left: 0px; z-index: 6;"
  >
    <span
      class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8"
    >
      <span
        class="flex h-full w-full items-center justify-center rounded-full border border-muted-foreground bg-muted overflow-hidden border-none"
      >
        <div
          class="facehash h-full w-full rounded-full text-background"
          data-facehash=""
          data-interactive="true"
          style="width: 100%; height: 100%; position: relative; display: flex; align-items: center; justify-content: center; overflow: hidden; container-type: size; perspective: 300px; transform-style: preserve-3d; background-color: rgb(0, 255, 93);"
        >
          <div
            data-facehash-gradient=""
            style="position: absolute; inset: 0px; pointer-events: none; z-index: 1; background: radial-gradient(100% 100% at 50% 50%, rgba(255, 255, 255, 0.15) 0%, transparent 60%);"
          />
          <div
            data-facehash-face=""
            style="position: absolute; inset: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 2; transform: rotateX(0deg) rotateY(15deg) translateZ(12px); transform-style: preserve-3d; transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
          >
            <svg
              aria-hidden="true"
              fill="none"
              style="width: 60%; height: auto; max-width: 90%; max-height: 40%;"
              viewBox="0 0 63 15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                style="animation: facehash-blink 2.8s ease-in-out 0.8s infinite; transform-origin: center center;"
              >
                <circle
                  cx="55.2"
                  cy="7.2"
                  fill="currentColor"
                  r="7.2"
                />
              </g>
              <g
                style="animation: facehash-blink 2.8s ease-in-out 0.8s infinite; transform-origin: center center;"
              >
                <circle
                  cx="7.2"
                  cy="7.2"
                  fill="currentColor"
                  r="7.2"
                />
              </g>
            </svg>
            <div
              data-facehash-mouth=""
              style="margin-top: 8%; display: flex; align-items: center; justify-content: center;"
            >
              <span
                data-testid="avatar-fallback-initial"
                style="font-size: 26cqw; line-height: 1;"
              >
                U
              </span>
            </div>
          </div>
        </div>
      </span>
    </span>
  </div>
  <div
    class="relative rounded-full shadow-xs"
    data-testid="container"
    style="margin-left: -8px; z-index: 7;"
  >
    <span
      class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8"
    >
      <span
        class="flex h-full w-full items-center justify-center rounded-full border border-muted-foreground bg-muted overflow-hidden border-none"
      >
        <div
          class="facehash h-full w-full rounded-full text-background"
          data-facehash=""
          data-interactive="true"
          style="width: 100%; height: 100%; position: relative; display: flex; align-items: center; justify-content: center; overflow: hidden; container-type: size; perspective: 300px; transform-style: preserve-3d; background-color: rgb(0, 240, 255);"
        >
          <div
            data-facehash-gradient=""
            style="position: absolute; inset: 0px; pointer-events: none; z-index: 1; background: radial-gradient(100% 100% at 50% 50%, rgba(255, 255, 255, 0.15) 0%, transparent 60%);"
          />
          <div
            data-facehash-face=""
            style="position: absolute; inset: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 2; transform: rotateX(-15deg) rotateY(0deg) translateZ(12px); transform-style: preserve-3d; transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
          >
            <svg
              aria-hidden="true"
              fill="none"
              style="width: 60%; height: auto; max-width: 90%; max-height: 40%;"
              viewBox="0 0 71 23"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                style="animation: facehash-blink 5.9s ease-in-out 3.9s infinite; transform-origin: center center;"
              >
                <rect
                  fill="currentColor"
                  height="23"
                  rx="3.5"
                  width="7"
                  x="8"
                  y="0"
                />
                <rect
                  fill="currentColor"
                  height="7"
                  rx="3.5"
                  width="23"
                  x="0"
                  y="8"
                />
              </g>
              <g
                style="animation: facehash-blink 5.9s ease-in-out 3.9s infinite; transform-origin: center center;"
              >
                <rect
                  fill="currentColor"
                  height="23"
                  rx="3.5"
                  width="7"
                  x="55.2"
                  y="0"
                />
                <rect
                  fill="currentColor"
                  height="7"
                  rx="3.5"
                  width="23"
                  x="47.3"
                  y="8"
                />
              </g>
            </svg>
            <div
              data-facehash-mouth=""
              style="margin-top: 8%; display: flex; align-items: center; justify-content: center;"
            >
              <span
                data-testid="avatar-fallback-initial"
                style="font-size: 26cqw; line-height: 1;"
              >
                U
              </span>
            </div>
          </div>
        </div>
      </span>
    </span>
  </div>
  <div
    class="relative rounded-full shadow-xs"
    data-testid="container"
    style="margin-left: -8px; z-index: 8;"
  >
    <span
      class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8"
    >
      <span
        class="flex h-full w-full items-center justify-center rounded-full border border-muted-foreground bg-muted overflow-hidden border-none"
      >
        <div
          class="facehash h-full w-full rounded-full text-background"
          data-facehash=""
          data-interactive="true"
          style="width: 100%; height: 100%; position: relative; display: flex; align-items: center; justify-content: center; overflow: hidden; container-type: size; perspective: 300px; transform-style: preserve-3d; background-color: rgb(0, 75, 255);"
        >
          <div
            data-facehash-gradient=""
            style="position: absolute; inset: 0px; pointer-events: none; z-index: 1; background: radial-gradient(100% 100% at 50% 50%, rgba(255, 255, 255, 0.15) 0%, transparent 60%);"
          />
          <div
            data-facehash-face=""
            style="position: absolute; inset: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 2; transform: rotateX(0deg) rotateY(0deg) translateZ(12px); transform-style: preserve-3d; transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
          >
            <svg
              aria-hidden="true"
              fill="none"
              style="width: 60%; height: auto; max-width: 90%; max-height: 40%;"
              viewBox="0 0 82 8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                style="animation: facehash-blink 5s ease-in-out 3s infinite; transform-origin: center center;"
              >
                <rect
                  fill="currentColor"
                  height="6.9"
                  rx="3.5"
                  width="6.9"
                  x="0.07"
                  y="0.16"
                />
                <rect
                  fill="currentColor"
                  height="6.9"
                  rx="3.5"
                  width="20.7"
                  x="7.9"
                  y="0.16"
                />
              </g>
              <g
                style="animation: facehash-blink 5s ease-in-out 3s infinite; transform-origin: center center;"
              >
                <rect
                  fill="currentColor"
                  height="6.9"
                  rx="3.5"
                  width="6.9"
                  x="74.7"
                  y="0.16"
                />
                <rect
                  fill="currentColor"
                  height="6.9"
                  rx="3.5"
                  width="20.7"
                  x="53.1"
                  y="0.16"
                />
              </g>
            </svg>
            <div
              data-facehash-mouth=""
              style="margin-top: 8%; display: flex; align-items: center; justify-content: center;"
            >
              <span
                data-testid="avatar-fallback-initial"
                style="font-size: 26cqw; line-height: 1;"
              >
                U
              </span>
            </div>
          </div>
        </div>
      </span>
    </span>
  </div>
  <div
    class="relative rounded-full shadow-xs"
    data-testid="container"
    style="margin-left: -8px; z-index: 9;"
  >
    <span
      class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8"
    >
      <span
        class="flex h-full w-full items-center justify-center rounded-full border border-muted-foreground bg-muted overflow-hidden border-none"
      >
        <div
          class="facehash h-full w-full rounded-full text-background"
          data-facehash=""
          data-interactive="true"
          style="width: 100%; height: 100%; position: relative; display: flex; align-items: center; justify-content: center; overflow: hidden; container-type: size; perspective: 300px; transform-style: preserve-3d; background-color: rgb(252, 0, 255);"
        >
          <div
            data-facehash-gradient=""
            style="position: absolute; inset: 0px; pointer-events: none; z-index: 1; background: radial-gradient(100% 100% at 50% 50%, rgba(255, 255, 255, 0.15) 0%, transparent 60%);"
          />
          <div
            data-facehash-face=""
            style="position: absolute; inset: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 2; transform: rotateX(0deg) rotateY(-15deg) translateZ(12px); transform-style: preserve-3d; transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
          >
            <svg
              aria-hidden="true"
              fill="none"
              style="width: 60%; height: auto; max-width: 90%; max-height: 40%;"
              viewBox="0 0 63 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                style="animation: facehash-blink 4.1s ease-in-out 2.1s infinite; transform-origin: center center;"
              >
                <path
                  d="M0 5.1c0-.1 0-.2 0-.3.1-.5.3-1 .7-1.3.1 0 .1-.1.2-.1C2.4 2.2 6 0 10.5 0S18.6 2.2 20.2 3.3c.1 0 .1.1.1.1.4.3.7.9.7 1.3v.3c0 1 0 1.4 0 1.7-.2 1.3-1.2 1.9-2.5 1.6-.2 0-.7-.3-1.8-.8C15 6.7 12.8 6 10.5 6s-4.5.7-6.3 1.5c-1 .5-1.5.7-1.8.8-1.3.3-2.3-.3-2.5-1.6v-1.7z"
                  fill="currentColor"
                />
              </g>
              <g
                style="animation: facehash-blink 4.1s ease-in-out 2.1s infinite; transform-origin: center center;"
              >
                <path
                  d="M42 5.1c0-.1 0-.2 0-.3.1-.5.3-1 .7-1.3.1 0 .1-.1.2-.1C44.4 2.2 48 0 52.5 0S60.6 2.2 62.2 3.3c.1 0 .1.1.1.1.4.3.7.9.7 1.3v.3c0 1 0 1.4 0 1.7-.2 1.3-1.2 1.9-2.5 1.6-.2 0-.7-.3-1.8-.8C57 6.7 54.8 6 52.5 6s-4.5.7-6.3 1.5c-1 .5-1.5.7-1.8.8-1.3.3-2.3-.3-2.5-1.6v-1.7z"
                  fill="currentColor"
                />
              </g>
            </svg>
            <div
              data-facehash-mouth=""
              style="margin-top: 8%; display: flex; align-items: center; justify-content: center;"
            >
              <span
                data-testid="avatar-fallback-initial"
                style="font-size: 26cqw; line-height: 1;"
              >
                U
              </span>
            </div>
          </div>
        </div>
      </span>
    </span>
  </div>
  <div
    class="relative rounded-full shadow-xs"
    data-testid="container"
    style="margin-left: -8px; z-index: 10;"
  >
    <span
      class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8"
    >
      <span
        class="flex h-full w-full items-center justify-center rounded-full border border-muted-foreground bg-muted overflow-hidden border-none"
      >
        <div
          class="facehash h-full w-full rounded-full text-background"
          data-facehash=""
          data-interactive="true"
          style="width: 100%; height: 100%; position: relative; display: flex; align-items: center; justify-content: center; overflow: hidden; container-type: size; perspective: 300px; transform-style: preserve-3d; background-color: rgb(255, 0, 0);"
        >
          <div
            data-facehash-gradient=""
            style="position: absolute; inset: 0px; pointer-events: none; z-index: 1; background: radial-gradient(100% 100% at 50% 50%, rgba(255, 255, 255, 0.15) 0%, transparent 60%);"
          />
          <div
            data-facehash-face=""
            style="position: absolute; inset: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 2; transform: rotateX(-15deg) rotateY(-15deg) translateZ(12px); transform-style: preserve-3d; transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
          >
            <svg
              aria-hidden="true"
              fill="none"
              style="width: 60%; height: auto; max-width: 90%; max-height: 40%;"
              viewBox="0 0 63 15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                style="animation: facehash-blink 3.2s ease-in-out 1.2s infinite; transform-origin: center center;"
              >
                <circle
                  cx="55.2"
                  cy="7.2"
                  fill="currentColor"
                  r="7.2"
                />
              </g>
              <g
                style="animation: facehash-blink 3.2s ease-in-out 1.2s infinite; transform-origin: center center;"
              >
                <circle
                  cx="7.2"
                  cy="7.2"
                  fill="currentColor"
                  r="7.2"
                />
              </g>
            </svg>
            <div
              data-facehash-mouth=""
              style="margin-top: 8%; display: flex; align-items: center; justify-content: center;"
            >
              <span
                data-testid="avatar-fallback-initial"
                style="font-size: 26cqw; line-height: 1;"
              >
                U
              </span>
            </div>
          </div>
        </div>
      </span>
    </span>
  </div>
  <div
    class="relative rounded-full shadow-xs"
    data-testid="container"
    style="margin-left: -8px; z-index: 11;"
  >
    <span
      class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8"
    >
      <span
        class="flex h-full w-full items-center justify-center rounded-full border border-muted-foreground bg-muted overflow-hidden border-none"
      >
        <div
          class="facehash h-full w-full rounded-full text-background"
          data-facehash=""
          data-interactive="true"
          style="width: 100%; height: 100%; position: relative; display: flex; align-items: center; justify-content: center; overflow: hidden; container-type: size; perspective: 300px; transform-style: preserve-3d; background-color: rgb(255, 153, 0);"
        >
          <div
            data-facehash-gradient=""
            style="position: absolute; inset: 0px; pointer-events: none; z-index: 1; background: radial-gradient(100% 100% at 50% 50%, rgba(255, 255, 255, 0.15) 0%, transparent 60%);"
          />
          <div
            data-facehash-face=""
            style="position: absolute; inset: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 2; transform: rotateX(15deg) rotateY(-15deg) translateZ(12px); transform-style: preserve-3d; transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
          >
            <svg
              aria-hidden="true"
              fill="none"
              style="width: 60%; height: auto; max-width: 90%; max-height: 40%;"
              viewBox="0 0 71 23"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                style="animation: facehash-blink 2.3s ease-in-out 0.3s infinite; transform-origin: center center;"
              >
                <rect
                  fill="currentColor"
                  height="23"
                  rx="3.5"
                  width="7"
                  x="8"
                  y="0"
                />
                <rect
                  fill="currentColor"
                  height="7"
                  rx="3.5"
                  width="23"
                  x="0"
                  y="8"
                />
              </g>
              <g
                style="animation: facehash-blink 2.3s ease-in-out 0.3s infinite; transform-origin: center center;"
              >
                <rect
                  fill="currentColor"
                  height="23"
                  rx="3.5"
                  width="7"
                  x="55.2"
                  y="0"
                />
                <rect
                  fill="currentColor"
                  height="7"
                  rx="3.5"
                  width="23"
                  x="47.3"
                  y="8"
                />
              </g>
            </svg>
            <div
              data-facehash-mouth=""
              style="margin-top: 8%; display: flex; align-items: center; justify-content: center;"
            >
              <span
                data-testid="avatar-fallback-initial"
                style="font-size: 26cqw; line-height: 1;"
              >
                U
              </span>
            </div>
          </div>
        </div>
      </span>
    </span>
  </div>
  <div
    class="relative flex size-8 items-center justify-center rounded-full border border-muted-foreground bg-background text-sm font-medium shadow-xs"
    data-testid="container"
    style="margin-left: -8px; z-index: 7;"
  >
    +94
  </div>
</div>
`;
